# sarv

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: app.rs  glossary.rs  main.rs  model.rs  parse.rs  source.rs  ui.rs
