[package]
name = "sarv"
version = "0.1.0"
edition = "2021"
authors = ["agenticode"]
description = "Interactive terminal cockpit for sar/sysstat data: live view, weeks of history, multi-metric overlay, day-to-day compare"
license = "MIT"
repository = "https://github.com/agenticode/sarv"
homepage = "https://github.com/agenticode/sarv"
readme = "README.md"
keywords = ["sar", "sysstat", "tui", "monitoring", "performance"]
categories = ["command-line-utilities", "visualization"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
serde_json = "1"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
